--- a/.templates/PluginProviderTemplate.xaml
+++ b/.templates/PluginProviderTemplate.xaml
@@ -15,6 +15,8 @@
         <RequiredArgumentAttribute />
       </x:Property.Attributes>
     </x:Property>
+    <x:Property Name="statusCode" Type="OutArgument(x:String)" />
+    <x:Property Name="statusMessage" Type="OutArgument(x:String)" />
   </x:Members>
   <this:PluginProviderTemplate.link>
     <InArgument x:TypeArguments="x:String">
